# format-converter-assistant

./: .gitignore  README.md  launcher.py  pyproject.toml
packaging/: build.ps1  installer.nsi
src/format_helper/: __init__.py  app.py  config.py  dependencies.py  engines.py  files.py  gui.py  history.py  job_queue.py  models.py  updater.py
tests/: test_files.py  test_models.py  test_updater.py
