[project]
name = "format-converter-assistant"
version = "0.1.0"
description = "Windows-first GUI format conversion assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "Pillow>=10.4",
    "pypdf>=4.3",
    "requests>=2.32",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7"]
pdf = ["pymupdf>=1.24"]
dev = ["pytest>=8.2", "pyinstaller>=6.9"]

[project.scripts]
format-helper = "format_helper.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

